asset/css/scripto.css
.browse .scripto-media td:first-child, 
.browse .scripto-media th:first-child {
    width: 36px;
}

.browse .scripto-media .row-number {
    width: 3em;
}

.browse .scripto-media .row-title {
    width: 50%;
}

.browse .scripto-revisions td {
    width: 100%;
    vertical-align: top;
}

.browse .scripto-revisions td:first-child,
.browse .scripto-revisions th:first-child {
    width: auto;
}

.scripto.browse th.comment {
    width: 40%;
}

.mediawiki-pagination {
    margin: 0 auto 0 12px;
}

#wikitext.active {
    display: flex; 
    justify-content: space-between; 
    flex-wrap: wrap;
}

#wikitext textarea {
    min-height: 400px;
    flex-grow: 1;
    margin-right: 24px;
    max-width: calc(50% - 12px);
}

#wikitext .media-render {
    max-width: calc(50% - 12px);
}

.current-previous {
    margin-right: 6px;
}

.from-revision,
.to-revision {
    width: 1em;
    margin: 0 6px;
}

#page-action-menu {
    display: inline-block;
    position: relative;
}

#page-action-menu ul {
    display: none;
    list-style: none;
    border: 1px solid #dfdfdf;
    background-color: #fff;
    border-radius: 3px;
    text-align: left;
    padding: 0;
    position: relative;
    box-shadow: 0 0 5px #dfdfdf;
    position: absolute;
    right: 0;
    width: auto;
    white-space: nowrap;
    margin: 12px 0;
}

#page-action-menu ul:before {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 12px;
    width: 0;
    height: 0;
    border-bottom: 12px solid #fff;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
}

#page-action-menu ul:after {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 11px;
    width: 0;
    height: 0;
    border-bottom: 14px solid #dfdfdf;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    z-index: -1;
}

#page-action-menu ul a,
#page-action-menu ul .inactive {
    padding: 6px 12px 5px;
    display: block;
    position: relative;
}

#page-action-menu ul .inactive {
    color: #dfdfdf;
}

#page-action-menu ul a:hover:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 3px;
    background-color: #dfdfdf;
}

#page-action-menu ul li:not(:last-child) a,
#page-action-menu ul li:not(:last-child) span {
    border-bottom: 1px solid #dfdfdf;
}

#page-action-menu .expand:after {
    content: "\f0d7";
}

#page-action-menu .expand:after,
#page-action-menu .collapse:after {
    margin-left: 6px;
}

#page-action-menu .collapse + .collapsible {
    overflow: visible;
    display: block;
}

.breadcrumbs > *:not(:last-child):after {
    content: none;
}

.breadcrumbs .separator {
    display: inline-block;
    margin: 0 6px;
    color: #000;
}

.breadcrumbs .separator:after {
    content: "\f0da";
    font-family: "FontAwesome";
    margin: 0;
}

#compare-table th {
    border-bottom: 1px solid #dfdfdf;
}

#compare-table td {
    position: relative;
}

#compare-table [colspan="2"],
#compare-table td.diff-context:nth-child(2) {
    border-right: 1px solid #dfdfdf;
}

#compare-table .diff-marker {
    width: 36px;
    vertical-align: top;
    text-align: center;
}

#compare-table col.diff-context {
    border-right: 1px solid #dfdfdf;
}

#compare-table .diff-addedline {
    background-color: #cdffcd;
    color: green;
}

#compare-table .diff-deletedline {
    color: #A91919;
    background-color: #fcc;
}

#compare-table .diff-deletedline div:before,
#compare-table .diff-addedline div:before {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 100%;
    width: 36px;
    text-align: center;
    line-height: 36px;
    font-weight: bold;
}

#compare-table .diff-addedline div:before {
    content: "+";
    background-color: #cdffcd;
}

#compare-table .diff-deletedline div:before {
    content: "-";
    background-color: #fcc;
}

#compare-table ins.diffchange:empty,
#compare-table del.diffchange:empty {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

#compare-table ins.diffchange:empty {
    background-color: #0080004f;
}


#compare-table del.diffchange:empty {
    background-color: #ff000061;
}

.parsed-comment {
    font-style: italic;
}

/* Login bar */

#scripto-login {
    display: flex;
    font-size: 14px;
    line-height: 21px;
    background-color: #0000000a;
    border-radius: 3px;
    padding: 6px;
    margin: 0 0 12px;
    align-items: center;
    justify-content: flex-end;
}

#scripto-login h3,
#scripto-login input,
#scripto-login button {
    font-size: 14px;
    line-height: 21px;
    margin: 0;
}

#scripto-login h3 {
    margin-right: auto;
}

#scripto-login input,
#scripto-login button {
    padding: 0 6px;
    height: 21px;
    min-height: 0;
}

#scripto-login .field {
    display: inline-flex;
    background: transparent;
    align-items: center;
    width: auto;
    padding: 0;
    margin: 0 12px 0 0;
}

#scripto-login .field-meta,
#scripto-login .inputs {
    padding: 0;
    line-height: 21px;
    width: auto;
}

#scripto-login .field-meta {
    text-align: right;
}

#scripto-login label {
    padding: 0 6px 0 0;
    max-width: none;
}

/* Dashboard */

.scripto.dashboard .dashboard-row {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.scripto.dashboard .panel {
    border: 1px solid #dfdfdf;
    border-radius: 3px;
    margin: 0 0 24px;
    width: calc(50% - 6px);
    padding: 0;
}

.scripto.dashboard .panel .button {
    min-height: 0;
    padding: 0 6px;
    font-size: 14px;
    margin: 0;
    font-weight: normal;
}

.scripto.dashboard .panel ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.scripto.dashboard .panel h4 {
    background-color: rgba(0,0,0,.04);
}

.scripto.dashboard .panel li,
.scripto.dashboard .panel h4,
.scripto.dashboard .panel p {
    padding: 6px 6px 5px;
    margin: 0;
}

.scripto.dashboard .panel h4,
.scripto.dashboard .panel li:not(:last-child) {
    border-bottom: 1px solid #dfdfdf;
}

/* User/browse */

.scripto.user.browse td {
    vertical-align: top;
}

.scripto.user.browse td:first-child, 
.scripto.user.browse th:first-child {
    width: auto;
}

.scripto.user.browse table.tablesaw td:first-child a {
    white-space: nowrap;
}

.scripto.user.browse .tablesaw-cell-content {
    flex-wrap: wrap;
}

